--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -22,8 +22,9 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{628d248c-4bac-47ff-99e2-b0dde9863fa0}</ProjectGuid>
-    <RootNamespace>Maman16Client</RootNamespace>
+    <RootNamespace>Client</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Client</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -78,12 +79,12 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880\Win32\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880\Win32\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -96,14 +97,14 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880\Win32\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880\Win32\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -114,12 +115,12 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880\x64\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880\x64\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,14 +133,14 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Maman16Client\cryptopp880\x64\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"D:\Files\University\מבוא לאבטחת המרחב המקוון\ממן 16\KerberosMessaging\Client\cryptopp880\x64\Output\Debug\cryptlib.lib";%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
